k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-demo-service
  namespace: spring-demo
spec:
  type: ClusterIP
  selector:
    app: spring-demo
  ports:
    - port: 8080
      targetPort: 8080
